tests/lime/fail/tokens/macro_rest/byte_45.wsa
macro m- [push 45] m-
